fix: 🐛 修复column的align属性在table的header上无效的bug
修复column的align属性在table的header上无效的bug

--- a/src/components/table/styles/index.less
+++ b/src/components/table/styles/index.less
@@ -99,6 +99,9 @@
     font-weight: 500;
     background: @table-selected-row-bg;
     transition: background 0.3s ease;
+    &.@{table-prefix-cls}-header-right {
+      text-align: right;
+    }
   }
   td {
     transition: all 0.3s, border 0s;
